remove JavaScript, add shadow - architecture

--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -335,7 +335,7 @@
       </div>
       <div class="column widthM">
         <img src="site_city_1.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">Museums in LA</p>
+        <p class="textS textItalic">Museums in LA</p>
       </div>
     </div>
     <!--Site and City -->
@@ -351,7 +351,7 @@
       </div>
       <div class="column widthM">
         <img src="site_city_2.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">Orientation of grid</p>
+        <p class="textS textItalic">Orientation of grid</p>
       </div>
     </div>
     <!--Site and City2 -->
@@ -367,7 +367,7 @@
       </div>
       <div class="column widthM">
         <img src="site_city_3.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">Angle from top and bottom boxes</p>
+        <p class="textS textItalic">Angle from top and bottom boxes</p>
       </div>
     </div>
     <!--Site and City3 -->
@@ -383,7 +383,7 @@
       </div>
       <div class="column widthM">
         <img src="site_city_4.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic"> Angle in between the rotated boxes</p>
+        <p class="textS textItalic"> Angle in between the rotated boxes</p>
       </div>
     </div>
     <!--Site and City4 -->
