--- a/architecture/index.html
+++ b/architecture/index.html
@@ -158,7 +158,7 @@
   <!--architecture 1-->
   <div id="ytrigger-arch">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a href="./recreation_commons"><img src="./ar_01.svg" class="widthS"> </a>
+      <a href="./recreation_commons"><img src="./ar_01.svg" class="widthS float"> </a>
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -195,7 +195,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <a href="./narrow_stripes/"> <img class="shadowAll" src="./ar_02.jpg"> </a>
+      <a href="./narrow_stripes/"> <img class="shadowOnly float" src="./ar_02.jpg"> </a>
     </div>
   </div>
   <!--architecture 2-->
@@ -203,7 +203,7 @@
   <!--THESIS 3-->
   <div id="ytrigger-arch3">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
+      <a href="./thesis_studio/"><img class="shadowOnly float" src="./ar_07.jpg"></a>
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -235,7 +235,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <a class="t-title" href="./manifold_ground/"> <img class="shadowAll" src="./ar_04.jpg"></a>
+      <a class="t-title" href="./manifold_ground/"> <img class="shadowOnly float" src="./ar_04.jpg"></a>
     </div>
   </div>
   <!--MANIFOLD GROUND 4-->
@@ -245,7 +245,7 @@
   <div id="ytrigger-arch5">
 
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
+      <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowOnly float"
           src="./ar_03.jpg"></a>
       <div class="blankVer">
       </div>
@@ -279,7 +279,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <a class="titleL" href="./the_rotation_of_curves/"> <img class="shadowAll"
+      <a class="titleL" href="./the_rotation_of_curves/"> <img class="shadowOnly float"
           src="./ar_05.jpg"></a>
     </div>
 
@@ -290,7 +290,7 @@
   <div id="ytrigger-arch7">
 
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a class="titleL" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
+      <a class="titleL" href="./LACAMA/"> <img class="shadowOnly float" src="./ar_08.jpg"></a>
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -324,7 +324,7 @@
 
 
 
-      <img class="widthL" src="./ar_06.jpg">
+      <img class="widthL float" src="./ar_06.jpg">
     </div>
   </div>
 
