--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -316,7 +316,7 @@
 
       <div class="column centerVer">
         <img src="CaseStudy1.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">SANNA, 21ST CENTURY MUSEUM OF CONTEMPORARY ART 2004 </p>
+        <p class="textS textItalic">SANNA, 21ST CENTURY MUSEUM OF CONTEMPORARY ART 2004 </p>
       </div>
     </div>
     <!--CaseStudy1 -->
@@ -333,7 +333,7 @@
 
       <div class="column centerVer">
         <img src="CaseStudy2.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">JUNTA ISHIGAMI, KANAGAWA INSTITUTE OF TECHNOLOGY 2008</p>
+        <p class="textS textItalic">JUNTA ISHIGAMI, KANAGAWA INSTITUTE OF TECHNOLOGY 2008</p>
       </div>
     </div>
     <!--CaseStudy2 -->
@@ -350,7 +350,7 @@
 
       <div class="column centerVer">
         <img src="CaseStudy3.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">MIES VAN DER ROHE, S.R. CROWN HALL 1956</p>
+        <p class="textS textItalic">MIES VAN DER ROHE, S.R. CROWN HALL 1956</p>
       </div>
     </div>
     <!--CaseStudy3 -->
@@ -369,7 +369,7 @@
 
       <div class="column centerVer">
         <img src="CaseStudy4.jpg" alt="DIAGRAM">
-        <p class="textS styleItalic">LE CORBUSIER, CARPENTER CENTER 1962</p>
+        <p class="textS textItalic">LE CORBUSIER, CARPENTER CENTER 1962</p>
       </div>
     </div>
     <!--CaseStudy4 -->
@@ -410,7 +410,7 @@
         the sequence, the repetition of the program as well as the repetition of the elements
       </p>
       <img src="Project.jpg" alt="DIAGRAM" class="image float">
-      <p class="textS styleItalic">a union of disparate systems</p>
+      <p class="textS textItalic">a union of disparate systems</p>
     </div>
 
   </div>
@@ -437,7 +437,7 @@
       an architectural design if the architect considers its effect on other systems.
     </p>
     <img src="Project1.jpg" alt="DIAGRAM" class="image float">
-    <p class="textS styleItalic">a union of disparate systems</p>
+    <p class="textS textItalic">a union of disparate systems</p>
   </div>
   <!--project1 -->
   <div class="blankHL"></div>
