--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
       <div class="t-hello">HELLO, </div>
     </div>
     <div class="intro" data-aos="fade-up">
-      <div class="introVer">
+      <div class="column">
         <div class="t-hi">I'm Vicky.</div>
       </div>
       <p class="divider"></p>
-      <div class="introVer">
+      <div class="column">
         <div class="intro">
           <span class="t-me">a designer</span>
           <span class="divider1"></span>
@@ -775,9 +775,7 @@
 
 
   <div class="marginAll marginAll1920">
-
-    <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
-      class="text-about-resume titleM displayNonePhone"> Download My Resume
+    <a href="https://s3.us-west-1.amazonaws.com/vickywang.me/Resume_vw.pdf" class="text-about-resume titleM displayNonePhone"> Download My Resume
     </a>
 
     <div class="blankHM"></div>
@@ -789,18 +787,24 @@
           EDUCATION </div>
         <div class="blankHS"></div>
 
-        <div class="introVer">
-          <p class="titleM">UC Berkeley
-          </p>
-          <p class="textS styleItalic">August 2015 - May 2019</p>
+        <div class="column">
+          <p class="titleM">UC Berkeley </p>
+          <div class="blankHXS"></div>
+
+          <p class="textS textItalic">August 2015 - May 2019</p>
+
           <p class="textM">Master of Architecture</p>
           <p class="textM">Building Science / Technology</p>
         </div>
         <div class="blankHS"></div>
 
-        <div class="introVer">
+        <div class="column">
+
           <p class="titleM">Beijing University of Tech</p>
-          <p class="textS styleItalic">May 2009 - August 2013 </p>
+          <div class="blankHXS"></div>
+
+          <p class="textS textItalic">May 2009 - August 2013 </p>
+
           <p class="textM">Bachelor of Art and Design</p>
           <p class="textM">Landscape Design</p>
         </div>
@@ -817,46 +821,52 @@
         </div>
 
         <div class="blankHS"></div>
-        <div class="introVer">
+        <div class="column">
           <p class="titleM">UI/UX
           </p>
-          <p class="textM">Sketch, Adobe XD, Figma</p>
+          <p class="textM">Adobe XD, Figma, Sketch</p>
         </div>
-        <br>
-
-        <div class="introVer">
-          <p class="titleM">Programming</p>
-          <p class="textM">HTML, CSS, JavaScript</p>
-          <p class="textM">jQuery</p>
-        </div>
-        <br>
-        <div class="introVer">
+        <div class="blankHXS"></div>
+        <div class="column">
           <p class="titleM">2D Graphic</p>
           <p class="textM">Adobe Suite (Illustrator, Photoshop, InDesign)</p>
           <p class="textM">AutoCAD</p>
         </div>
-        <br>
+        <div class="blankHXS"></div>
 
-        <div class="introVer">
+        <div class="column">
+          <p class="titleM">Programming</p>
+          <p class="textM">HTML, CSS, JavaScript</p>
+          <p class="textM">jQuery</p>
+        </div>
+        <div class="blankHXS"></div>
+
+        <div class="column">
+          <p class="titleM">Design Research </p>
+          <p class="textM">Interview &amp; Survey</p>
+          <p class="textM">Empathy Maps</p>
+          <p class="textM">User Journey</p>
+          <p class="textM"> Competitive audit</p>
+
+        </div>
+
+        <div class="blankHXS"></div>
+
+        <div class="column">
           <p class="titleM">3D Modelling and VR</p>
-          <p class="textM">3Dmax Studio, Rhino, Sketchup</p>
+          <p class="textM">3Dmax Studio, Rhino, SketchUp</p>
           <p class="textM">Grasshopper, Ladybug, DIVA</p>
           <p class="textM">Unity</p>
         </div>
-        <br>
 
-        <div class="introVer">
-          <p class="titleM">Design Research
-          </p>
-          <p class="textM">Affinity Diagramming</p>
-          <p class="textM">Experience Prototyping</p>
-        </div>
-        <br>
 
-        <div class="introVer">
+        <div class="blankHXS"></div>
+
+        <div class="column">
           <p class="titleM">Fabrication
           </p>
-          <p class="textM">3D Printing, 3D Scanner (NextEngine 3D)</p>
+          <p class="textM">3D Printing</p>
+          <p class="textM">3D Scanner (NextEngine 3D)</p>
           <p class="textM">CNC (Techno Isel 3-axis CNC router), </p>
           <p class="textM">Laser Cutter, Blade Cutter (Zund S3 Digital)</p>
         </div>
@@ -868,36 +878,52 @@
         <div class="titleL" data-aos="fade-up">
           EXPERIENCE </div>
         <div class="blankHS"></div>
+        <div class="column">
+          <p class="titleM">BookYourPet</p>
+          <p class="textS textItalic">October 2021 &#8212; Present</p>
+          <p class="textS">Calabasas, CA</p>
+          <p class="textM">UI&#47;UX designer &amp; Web designer</p>
 
+        </div>
+        <div class="blankHXS"></div>
 
-        <div class="introVer">
+        <div class="column">
+          <p class="titleM">vickywang.me</p>
+          <p class="textS textItalic">December 2020 &#8212; Present</p>
+          <p class="textS">Berkeley, CA</p>
+          <p class="textM">Product designer</p>
+
+        </div>
+        <div class="blankHXS"></div>
+
+        <div class="column">
           <p class="titleM">Buro Ole Scheeren</p>
-          <p class="textS styleItalic">August 2017 - July 2018</p>
-          <p class="textM">Beijing, China</p>
+          <p class="textS textItalic">August 2017 &#8212; July 2018</p>
+          <p class="textS">Beijing, China</p>
           <p class="textM">Architectural Designer</p>
         </div>
         <br>
 
-        <div class="introVer">
+        <div class="column">
           <p class="titleM">In Design Studio</p>
-          <p class="textS styleItalic">May 2017 - August 2017</p>
-          <p class="textM">New York, U.S.</p>
+          <p class="textS textItalic">May 2017 - August 2017</p>
+          <p class="textS">New York, U.S.</p>
           <p class="textM">Summer Intern</p>
         </div>
         <br>
 
-        <div class="introVer">
+        <div class="column">
           <p class="titleM">PDI Design Group</p>
-          <p class="textS styleItalic">December 2013 - July 2015</p>
-          <p class="textM">Beijing, China</p>
+          <p class="textS textItalic">December 2013 - July 2015</p>
+          <p class="textS">Beijing, China</p>
           <p class="textM">Architectural Designer</p>
         </div>
         <br>
 
-        <div class="introVer">
+        <div class="column">
           <p class="titleM">Do Union</p>
-          <p class="textS styleItalic">July 2010 - May 2012</p>
-          <p class="textM">Beijing, China</p>
+          <p class="textS textItalic">July 2010 - May 2012</p>
+          <p class="textS">Beijing, China</p>
           <p class="textM">Architectural Intern</p>
         </div>
         <div class="blankHM"></div>
