--- a/photography/index.html
+++ b/photography/index.html
@@ -151,7 +151,7 @@
   <!--Photo 1-->
   <div id="ytrigger-pg">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./01.jpg">
+      <img class=" shadowOnly" src="./01.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -179,7 +179,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./02.jpg">
+      <img class=" shadowOnly" src="./02.jpg">
     </div>
 
 
@@ -190,7 +190,7 @@
   <!--Photo 3-->
   <div id="ytrigger-pg3">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./03.jpg">
+      <img class=" shadowOnly" src="./03.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -218,7 +218,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./04.jpg">
+      <img class=" shadowOnly" src="./04.jpg">
     </div>
 
   </div>
@@ -230,7 +230,7 @@
   <div id="ytrigger-pg5">
 
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./05.jpg">
+      <img class=" shadowOnly" src="./05.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -256,7 +256,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./06.jpg">
+      <img class=" shadowOnly" src="./06.jpg">
     </div>
   </div>
   <!--Photo 6-->
@@ -265,7 +265,7 @@
   <!--Photo 7-->
   <div id="ytrigger-pg7">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./07.jpg">
+      <img class=" shadowOnly" src="./07.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -292,7 +292,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./08.jpg">
+      <img class=" shadowOnly" src="./08.jpg">
     </div>
   </div>
   <!--Photo 8-->
@@ -302,7 +302,7 @@
   <div id="ytrigger-pg9">
 
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./09.jpg">
+      <img class=" shadowOnly" src="./09.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -328,7 +328,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./10.jpg">
+      <img class=" shadowOnly" src="./10.jpg">
     </div>
   </div>
   <!--Photo 10-->
@@ -337,7 +337,7 @@
   <!--Photo 11-->
   <div id="ytrigger-pg11">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./11.jpg">
+      <img class=" shadowOnly" src="./11.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -365,7 +365,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./12.jpg">
+      <img class=" shadowOnly" src="./12.jpg">
     </div>
   </div>
 
@@ -377,7 +377,7 @@
   <div id="ytrigger-pg13">
 
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./13.jpg">
+      <img class=" shadowOnly" src="./13.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -404,7 +404,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./14.jpg">
+      <img class=" shadowOnly" src="./14.jpg">
     </div>
   </div>
   <!--Photo 14-->
@@ -414,7 +414,7 @@
   <!--Photo 15-->
   <div id="ytrigger-pg15">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./15.jpg">
+      <img class=" shadowOnly" src="./15.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -441,7 +441,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./16.jpg">
+      <img class=" shadowOnly" src="./16.jpg">
     </div>
   </div>
   <!--Photo 16-->
@@ -452,7 +452,7 @@
   <!--Photo 17-->
   <div id="ytrigger-pg17">
     <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class="float shadowAll" src="./17.jpg">
+      <img class=" shadowOnly" src="./17.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -478,7 +478,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <img class="float shadowAll" src="./19.jpg">
+      <img class=" shadowOnly" src="./19.jpg">
     </div>
   </div>
   <!--Photo 18-->
