--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -120,14 +120,14 @@
 
   <!--about gardenershub-->
   <div class="colorGrey" id="bg-color-trigger">
-
-    <div class="blankHL blankHL1920"></div>
     <div class="blankPhone"></div>
-    <div class="marginAll marginAll1920 rowChng centerVer">
 
-      <img class="widthM widthL1920" src="../../layout_gardenershub.png" alt="Gardenrs' Hub">
-      <div class="column ">
-        <P class="titleM" data-aos="fade-up">GARDENERS HUB </P>
+    <div class="blankHS"></div>
+
+    <div class="rowChng centerHorz centerVer alignCPH">
+      <img src="../../layout_gardenershub.png" alt="Meal Planner" class="widthXL">
+      <div class="column widthMPhHalf">
+        <P class="titleL">GARDENERS HUB</P>
         <p class="lineHorizAll"></p>
         <p class="textS"> <strong>My Role:</strong> &nbsp; Design Research, UX/UI Design,
           Visual Design, Interaction Design, Wireframing, Branding, Prototyping, Usability Testing
@@ -141,9 +141,10 @@
         </p>
       </div>
     </div>
-    <div class="blankHXL"></div>
+    <div class="blankHM"></div>
 
   </div>
+
 
   <!--about gardenershub-->
 
@@ -1249,7 +1250,7 @@
     <div class="column">
       <div class="row">
         <P class="titleM">IDENTIFYING PAIN POINTS</P>
-        <img class="widthIconS  float" src="icon_painpoints.svg" alt="User Research">
+        <img class="widthIconS float" src="icon_painpoints.svg" alt="User Research">
       </div>
       <p class="textM">Based on the information collected from contextual inquiries and user
         interviews, I used affinity mapping to group the pain points into similar categories on a
