--- a/project/index.html
+++ b/project/index.html
@@ -176,8 +176,11 @@
       <div class="column widthM">
         <a href="/project/meal_planner" class="titleL" data-aos="fade-up">MEAL PLANNER</a>
         <p class="lineHorizAll"></p>
+
+        <p class="textS textItalic">May 2021 - August 2021</p>
+        <div class="blankHXS"></div>
+
         <p class="textM">A mobile app helps planning a healthy meal</p>
-        <p class="textM">May 2021 - August 2021</p>
       </div>
     </div>
   </div>
@@ -190,8 +193,11 @@
       <div class="column widthM">
         <a href="/project/gardeners_hub" class="titleL" data-aos="fade-up">GARDENERS HUB</a>
         <p class="lineHorizAll"></p>
+
+        <p class="textS textItalic">May 2021 - August 2021</p>
+
         <p class="textM">A marketplace for local community</p>
-        <p class="textM">May 2021 - August 2021</p>
+
       </div>
       <div class="blankVer">
       </div>
@@ -218,11 +224,11 @@
         <a href="/project/appointment_maker" class="titleL" data-aos="fade-up">Appointment
           Maker</a>
         <p class="lineHorizAll"></p>
-        <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 1</p>
-        <p class="textS"> <strong>About:</strong> &nbsp; A scheduling app for making appointment
+        <p class="textS textItalic">Ongoing</p>
+        <p class="textM"> Google UX Certificate Project 1</p>
+        <p class="textM"> A scheduling app for making appointment
           makers</p>
-        <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
-        <p class="textM">Coming Soon</p>
+        <p class="textM"> 4 Weeks</p>
       </div>
     </div>
   </div>
@@ -280,7 +286,7 @@
 
   </div>
   <!--Social Good-->
-  <div class="blankHM"></div>
+  <div class="blankHXL"></div>
 
 
   <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
@@ -288,7 +294,7 @@
 
 
 
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
 
 
 
