--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -258,11 +258,9 @@
         <div
           class="row widthM heightM shadowOnly border-radius float centerVer colorBorderL marginAllS">
           <div class="column centerVer padding widthXS">
-            <div class="shadowOnly circle-mp-s float ">
-              <img class="mp-featureicons" src="f_icon_equipment.svg" alt="Equipment">
-            </div>
+            <img class="widthIconS" src="f_icon_equipment.svg" alt="Equipment">
             <div class="lineHorizAll-mp"></div>
-            <P class="titleM"> Equipment</P>
+            <P class="titleS"> Equipment</P>
           </div>
           <div class="column padding">
             <div class="row align-top">
@@ -289,12 +287,10 @@
         <div
           class="row widthM heightM shadowOnly border-radius float centerVer colorBorderL marginAllS">
           <div class="column centerVer padding widthXS">
-            <div class="shadowOnly circle-mp-s float ">
-              <img class="mp-featureicons" src="f_icon_recipe.svg" alt="Equipment">
-            </div>
+            <img class="widthIconS" src="f_icon_recipe.svg" alt="Equipment">
             <div class="lineHorizAll-mp"></div>
 
-            <P class="titleM"> Recipe</P>
+            <P class="titleS"> Recipe</P>
           </div>
           <div class="column padding">
             <div class="row align-top">
@@ -323,12 +319,10 @@
         <div
           class="row widthM heightM shadowOnly border-radius float centerVer colorBorderL marginAllS">
           <div class="column centerVer padding widthXS">
-            <div class="shadowOnly circle-mp-s float ">
-              <img class="mp-featureicons" src="f_icon_pantry.svg" alt="Equipment">
-            </div>
+            <img class="widthIconS" src="f_icon_pantry.svg" alt="Equipment">
             <div class="lineHorizAll-mp"></div>
 
-            <P class="titleM">Inventory</P>
+            <P class="titleS">Inventory</P>
           </div>
           <div class="column padding">
             <div class="row align-top">
@@ -355,12 +349,10 @@
         <div
           class="row widthM heightM shadowOnly border-radius float centerVer colorBorderL marginAllS">
           <div class="column centerVer padding widthXS">
-            <div class="shadowOnly circle-mp-s float ">
-              <img class="mp-featureicons" src="f_icon_shoppinglist.svg" alt="Equipment">
-            </div>
+            <img class="widthIconS" src="f_icon_shoppinglist.svg" alt="Equipment">
             <div class="lineHorizAll-mp"></div>
 
-            <P class="titleM"> Shopping List </P>
+            <P class="titleS"> Shopping List </P>
           </div>
           <div class="column padding">
             <div class="row align-top">
@@ -412,7 +404,7 @@
         </div>
 
         <div class="MPslide centerHorz hfSlide">
-          <div class="clip-shape-shadow ">
+          <div class="clip-shape-shadow">
             <div class="clip-shape widthM widthM1920"><img src="hf_landing1.svg"></div>
           </div>
         </div>
@@ -623,19 +615,19 @@
     <div class="rowChng alignCPH">
 
       <div class="column centerVer centerVer">
-        <P class="circle-mp shadowOnly titleM centerHorz centerVer ">Empathize </P>
+        <P class="circle-mp shadowOnly titleM centerHorz centerVer float">Empathize </P>
 
         <div class="blankHM"></div>
         <div class="column align-left">
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Design Strategy</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> User Research</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Competitive Analysis </li>
           </ul>
@@ -648,19 +640,19 @@
         <P class="circle-mp shadowOnly titleM centerHorz centerVer float">Define </P>
         <div class="blankHM"></div>
         <div class="column align-left">
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Secondary Research</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Survey</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Persona </li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> User Journey </li>
           </ul>
@@ -674,19 +666,19 @@
         <div class="blankHM"></div>
         <div class="column align-left">
 
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Brain Stroming</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> User Flow</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Card Sorting </li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Information Architecture </li>
           </ul>
@@ -699,19 +691,19 @@
         <div class="blankHM"></div>
         <div class="column align-left">
 
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Branding</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Wireframes</li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Prototypes </li>
           </ul>
-          <ul class="row align-top">
+          <ul class="row centerVer">
             <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Visal Design </li>
           </ul>
@@ -733,8 +725,8 @@
     </div>
   </div>
 
-
   <div class="blankHM"></div>
+
 
 
   <!-- 01 -->
@@ -2029,7 +2021,6 @@
     <p class="textM">&#183;Users are not able to find categories and summary content
       at first glance</p>
   </div>
-
   <!-- 05 -->
   <div class="marginAll marginAll1920">
 
